--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -1,21 +1,20 @@
-extends ../includes/_layout-main
-include ../mixins/_footer
+extends ../includes/layout-main
+include ../mixins/footer
 
 block content
 
   //- Header
-  header.header
-    .header__main.px-16
-      p.main__text.
-        <span class='invisible md-visible'>"</span>La <b>ayuda</b> que necesitas para hacer realidad tu <b>proyecto</b> digital<span class='invisible md-visible'>"</span>
-    .header__down.px-16
+  header.home__header
+    .header__phrase
+      p La <b>ayuda</b> que necesitas para hacer realidad tu <b>proyecto</b> digital
+    .header__down-arrow
       .down__link
         img.down__icon(src='assets/pictures/svg/arrow_down_24.svg')
 
   //- Content
-  main.container: .w-100pc.md-flex.md-justify-between
+  main.container: .home__main
 
-    .w-100pc.md-max-w-294
+    .main__section
       .box
         h1.box__title.mb-0 Jacob Samuel G.
         h2.box__subtitle Programador web full-stack
@@ -24,25 +23,23 @@ block content
         p.
           Puedo ayudarte en la creación de tu nuevo proyecto digital y guiarte paso a paso durante todas sus etapas, hasta que tu servicio se convierta en una opción rentable y relevante en el mercado.
 
-    .w-100pc.md-max-w-294
+    .main__sections
       .box
         h2.box__title Hablemos sobre tu proyecto
-        .flex.items-center.mt-16
+        .s2__data.mt-16
           img.mr-16(src='assets/pictures/svg/email_16.svg')
           p.m-0 jsgcontacto[arroba]gmail.com
-        .flex.items-center.mt-8
+        .s2__data.mt-8
           img.mr-16(src='assets/pictures/svg/phone_16.svg')
           p.m-0 938 146 02 85
-
       .box
         h2.box__title Escribí algunos artículos que podrían interesarte
-        .flex.flex-col.items-start
-          a.block(href='/articles/intro-agile.html') Sincera introducción a las metodologías agiles.
-          a.block.mt-8(href='/articles/lean-startup.html') Que es Lean Startup y porque deberías utilizarlo.
-          a.block.mt-8(href='/articles/mvp-benefits.html') Los 5 beneficios del MVP.
+        .s3__data
+          a(href='/articles/intro-agile.html') Sincera introducción a las metodologías agiles.
+          a.mt-8(href='/articles/lean-startup.html') Que es Lean Startup y porque deberías utilizarlo.
+          a.mt-8(href='/articles/mvp-benefits.html') Los 5 beneficios del MVP.
 
   +footer('home')
-
 
 
 
