--- a/src/views/pages/process.pug
+++ b/src/views/pages/process.pug
@@ -1,6 +1,6 @@
-extends ../includes/_layout-main
-include ../mixins/_footer
-include ../mixins/_bar-back
+extends ../includes/layout-main
+include ../mixins/footer
+include ../mixins/bar-back
 
 block content
 
