--- a/src/views/mixins/footer.pug
+++ b/src/views/mixins/footer.pug
@@ -1,13 +1,19 @@
-
 mixin footer(type)
   footer.container: .footer
     case type
       when 'home'
         a.footer__link.footer__link--active(href='/') Inicio
         a.footer__link(href='/about-me.html') Sobre mí
+        a.footer__link(href='/technical-profile.html') Perfil técnico
       when 'about'
         a.footer__link(href='/') Inicio
         a.footer__link.footer__link--active(href='/about-me.html') Sobre mí
+        a.footer__link(href='/technical-profile.html') Perfil técnico
+      when 'technical'
+        a.footer__link(href='/') Inicio
+        a.footer__link(href='/about-me.html') Sobre mí
+        a.footer__link.footer__link--active(href='/technical-profile.html') Perfil técnico
       default
         a.footer__link(href='/') Inicio
         a.footer__link(href='/about-me.html') Sobre mí
+        a.footer__link(href='/technical-profile.html') Perfil técnico
