feat: add technical-profile page

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,10 +2,10 @@
 $light-background-color: #e5e5e5;
 $dark-background-color: #21232a;
 
-// Text colors
+// Colors
 $blacky: #000;
+$black: #21232a;
 $primary-text-color: #333333;
 $secondary-text-color: #666666;
-
-// Links colors
+$primary-border-light-color: #E8E8E8;
 $primary-link-color: #2492b5;
