--- a/src/views/pages/about-me.pug
+++ b/src/views/pages/about-me.pug
@@ -27,6 +27,6 @@ block content
     .box.about__links
       h2.box__title.text-center Enlaces
       p.
-        Quizá lo encuentres en <a href='https://www.facebook.com/jsgnotas' target="_blank">Facebook</a>. Puedes mirar sus nada asombrosas fotografías en <a href='https://instagram.com/jacobs_views' target="_blank">Instagram</a>, y leer algunas de las notas bíblicas que comparte en su <a style="white-space: nowrap;" href='https://jsgnotes.tumblr.com'>Blog personal</a>.
+        Quizá lo encuentres en <a href='https://www.facebook.com/jsgnotas' target="_blank">Facebook</a>. Puedes mirar sus nada asombrosas fotografías en <a href='https://instagram.com/jacobs_views' target="_blank">Instagram</a>, y leer algunas de las notas bíblicas que comparte en su <a style="white-space: nowrap;" href='https://jsgnotes.tumblr.com' target="_blank">Blog personal</a>.
 
   +footer('about')
