--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -16,12 +16,13 @@ block content
 
     .main__section
       .box
-        h1.box__title.mb-0 Jacob Samuel G.
-        h2.box__subtitle Programador web full-stack
+        h1.box__title ¿En que puedo ayudarte?
         p.
-          Estoy especializado en el desarrollo de productos mínimos viables basados en la metodología Lean.
+          ¡Hola! Mi nombre es Jacob. Estoy especializadome en el desarrollo de productos mínimos viables basados en la metodología Lean.
         p.
-          Puedo ayudarte en la creación de tu nuevo proyecto digital y guiarte paso a paso durante todas sus etapas, hasta que tu servicio se convierta en una opción rentable y relevante en el mercado.
+          Podemos trabajar juntos en la creación de tu proyecto digital, te guiaré paso a paso durante todas sus etapas, hasta que tu servicio se convierta en una opción rentable y relevante en el mercado.
+
+        a(href="/technical-profile.html") Ver perfil técnico.
 
     .main__sections
       .box
@@ -32,6 +33,9 @@ block content
         .s2__data.mt-8
           img.mr-16(src='assets/pictures/svg/phone_16.svg')
           p.m-0 938 146 02 85
+        .mt-16
+          small(style="display: block; line-height: 1.5;").
+            El [arroba] debe sustituirse por @. Es un pequeño truco para evitar el spam.
       .box
         h2.box__title Escribí algunos artículos que podrían interesarte
         .s3__data
