--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -14,6 +14,7 @@
 // Pages
 @import './pages/home';
 @import './pages/about-me';
+@import './pages/technical-profile';
 
 @import './pages/process';
 @import './pages/404';
