--- a/src/styles/utilities/atomics.scss
+++ b/src/styles/utilities/atomics.scss
@@ -7,26 +7,29 @@
 
 // Top
 .mt-8{
-  margin-top: 8px;
+  margin-top: 0.5rem;
 }
 .mt-16{
-  margin-top: 16px;
+  margin-top: 1rem;
 }
 .mt-32{
-  margin-top:32px;
+  margin-top:2rem;
 }
 
 // Right
 .mr-16{
-  margin-right: 16px;
+  margin-right: 1rem;
 }
 
 // Bottom
 .mb-0{
   margin-bottom: 0;
 }
+.mb-8{
+  margin-bottom: 0.5rem;
+}
 .mb-32{
-  margin-bottom: 32px;
+  margin-bottom: 2rem;
 }
 
 // Left
@@ -35,6 +38,9 @@
 // ALIGNS
 .text-center{
   text-align: center;
+}
+.text-justify{
+  text-align: justify;
 }
 
 // COLORS
