chore: update technical profile info

--- a/src/views/pages/technical-profile.pug
+++ b/src/views/pages/technical-profile.pug
@@ -55,12 +55,12 @@ block content
           img.goal__icon(src='assets/pictures/svg/availability.svg')
           .goal__content
             h3 Disponibilidad
-            p Implementar infraestructura capaz de persistir durante los altos picos de tráfico que suelen suceder cuando la aplicación comienza a crecer.
+            p Implementar infraestructura progresivamente, preparandola para los altos picos de tráfico que suelen suceder durante el crecimiento de la aplicación.
         .main__goal
           img.goal__icon(src='assets/pictures/svg/usability.svg')
           .goal__content
             h3 Usabilidad
-            p Diseñar experiencias positivas para los usuarios que interactúan con la aplicación.  Ofreciendo siempre diseños sensibles capaces de adaptarse a los diversos dispositivos del mercado actual.
+            p Ofrecer experiencias positivas para los usuarios que interactúan con la aplicación. Creando diseños sensibles capaces de adaptarse a los diversos dispositivos del mercado actual.
         .main__goal
           img.goal__icon(src='assets/pictures/svg/maintenance.svg')
           .goal__content
@@ -70,7 +70,7 @@ block content
           img.goal__icon(src='assets/pictures/svg/vanguard.svg')
           .goal__content
             h3 Vanguardia
-            p Mantener los sistemas actualizados, buscando utilizar las tecnologías relevantes, siempre y cuando beneficien al proyecto desde la perspectiva técnica y de negocios.
+            p Mantener los sistemas actualizados. Utilizando las tecnologías relevantes, siempre y cuando beneficien al proyecto desde la perspectiva técnica y de negocios.
 
   section.container: .box.technical__skills
     h2.box__title.text-center Habilidades técnicas
