feat: update technical profile

--- a/src/views/pages/technical-profile.pug
+++ b/src/views/pages/technical-profile.pug
@@ -55,7 +55,7 @@ block content
           img.goal__icon(src='assets/pictures/svg/availability.svg')
           .goal__content
             h3 Disponibilidad
-            p Implementar infraestructura progresiva, preparada para persistir durante los altos picos de tráfico que suelen suceder durante el crecimiento de la aplicación.
+            p Implementar infraestructura progresiva, preparada para persistir los altos picos de tráfico que suelen suceder durante el crecimiento de la aplicación.
         .main__goal
           img.goal__icon(src='assets/pictures/svg/usability.svg')
           .goal__content
