update technical profile info

--- a/src/views/pages/technical-profile.pug
+++ b/src/views/pages/technical-profile.pug
@@ -60,7 +60,7 @@ block content
           img.goal__icon(src='assets/pictures/svg/usability.svg')
           .goal__content
             h3 Usabilidad
-            p Ofrecer experiencias positivas para los usuarios que interactúan con la aplicación. Creando diseños sensibles capaces de adaptarse a los diversos dispositivos del mercado actual.
+            p Ofrecer experiencias positivas para los usuarios que interactúan con la aplicación. Crear diseños sensibles capaces de adaptarse a los diversos dispositivos del mercado actual.
         .main__goal
           img.goal__icon(src='assets/pictures/svg/maintenance.svg')
           .goal__content
@@ -70,7 +70,7 @@ block content
           img.goal__icon(src='assets/pictures/svg/vanguard.svg')
           .goal__content
             h3 Vanguardia
-            p Mantener los sistemas actualizados. Utilizando las tecnologías relevantes, siempre y cuando beneficien al proyecto desde la perspectiva técnica y de negocios.
+            p Mantener los sistemas actualizados. Utilizar las tecnologías relevantes, siempre y cuando beneficien al proyecto desde la perspectiva técnica y de negocios.
 
   section.container: .box.technical__skills
     h2.box__title.text-center Habilidades técnicas
