feat: add sections

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -8,7 +8,10 @@
 @import './utilities/atomics';
 
 // Componets
+@import './components/bar';
+@import './components/footer';
 
 // Pages
 @import './pages/home';
+@import './pages/technical-profile';
 @import './pages/404';
