--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -1,4 +1,5 @@
 extends ../includes/layout-main
+include ../mixins/footer
 
 block content
 
@@ -23,3 +24,5 @@ block content
       h2.box__title.text-center Enlaces
       p.
         Quizá lo encuentres en <a href='https://www.facebook.com/jsgnotas' target="_blank">Facebook</a>. Puedes mirar sus nada asombrosas fotografías en <a href='https://instagram.com/jacobs_views' target="_blank">Instagram</a> y leer algunas de las notas personales que comparte en <a style="white-space: nowrap;" href='https://enmidimension.tumblr.com' target="_blank">Tumblr</a>.
+
+  +footer('home')
