--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -1,10 +1,12 @@
-.home__main{
-  margin-top: 80px;
-
+.home{
   @media (min-width: 768px) {
     padding-left: 110px;
     padding-right: 110px;
   }
+}
+
+.home__main{
+  margin-top: 80px;
 
   .main__picture{
     display: flex;
@@ -17,15 +19,14 @@
   }
 }
 
+.home__projects{
+  p span {
+    color: gray;
+  }
+}
+
 .home__secret-link:hover {
   color: white;
   background-color: red;
   transition: none;
-}
-
-.home__links{
-  @media (min-width: 768px) {
-    padding-left: 110px;
-    padding-right: 110px;
-  }
 }
