--- a/src/styles/utilities/atomics.scss
+++ b/src/styles/utilities/atomics.scss
@@ -28,6 +28,9 @@
 .mb-8{
   margin-bottom: 0.5rem;
 }
+.mb-16{
+  margin-bottom: 1rem;
+}
 .mb-32{
   margin-bottom: 2rem;
 }
@@ -47,5 +50,9 @@
 
 .text-feature{
   color: black;
-  font-size: 17px;
+  font-size: 16px;
+}
+
+.hidden-link:hover{
+  color: red;
 }
